# qbice

./: 404.html  Cargo.toml  LICENSE  README.md  introduction.html  print.html  searcher-c2a407aa.js  searchindex-21264dc2.js  searchindex-bb82a940.js  searchindex-e0492d05.js  toc-40332333.js  toc.html
.github/workflows/: deploy-book.yml
advanced/: firewall.html  persistence.html
appendix/: glossary.html
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: firewall.md  persistence.md
book/src/appendix/: glossary.md
book/src/tutorial/: defining-queries.md  executing-queries.md  getting-started.md  implementing-executors.md  setting-up-engine.md  updating-inputs.md
crates/benchmark/: Cargo.toml
crates/benchmark/benches/: firewall.rs
crates/benchmark/src/: lib.rs
crates/identifiable_derive/: Cargo.toml
crates/identifiable_derive/src/: lib.rs
crates/identifiable_derive_lib/: Cargo.toml
crates/identifiable_derive_lib/src/: lib.rs
crates/integration_test/: Cargo.toml  graph.html
crates/integration_test/src/: cancellation.rs  lib.rs
crates/integration_test/tests/: basic_queries.rs  cancellation.rs  cyclic_dependencies.rs  dynamic_firewall_and_projection.rs  external_input.rs  firewall.rs  input_changes.rs  parallel_queries.rs  projection.rs  timestamp_cancellation.rs  visualization.rs
crates/qbice/: Cargo.toml  README.md
crates/qbice/src/: concurrent_data_structure.rs  config.rs  engine.rs  executor.rs  kv_database.rs  lib.rs  lru.rs  program.rs  query.rs
crates/qbice/src/concurrent_data_structure/: lru.rs
crates/qbice/src/concurrent_data_structure/lru/: test.rs
crates/qbice/src/engine/: computation_graph.rs  database.rs  dyn_query.rs  fingerprint.rs  guard.rs  meta.rs  test.rs  tfc_archetype.rs  uncancellable_worker.rs  visualization.rs  yielder.rs
crates/qbice/src/engine/computation_graph/: backward_projection.rs  caller.rs  cancel.rs  computed.rs  computing.rs  computing_lock.rs  database.rs  dirty_propagation.rs  dirty_worker.rs  fast_path.rs  input_session.rs  lock.rs  persist.rs  query_lock_manager.rs  query_store.rs  register_callee.rs  repair.rs  slow_path.rs  statistic.rs  tfc_achetype.rs  timestamp.rs  visualization.rs
crates/qbice/src/engine/computation_graph/computed/: query_store.rs
crates/qbice/src/engine/computation_graph/database/: snapshot.rs  sync.rs
crates/qbice/src/engine/computation_graph/dirty_worker/: task.rs
crates/qbice/src/engine/computation_graph/persist/: query_store.rs  sync.rs  writer.rs
crates/qbice/src/engine/database/: meta.rs  statistics.rs  storage.rs  tfc_archetype.rs
crates/qbice/src/lru/: test.rs
crates/qbice_derive/: Cargo.toml
crates/qbice_derive/src/: lib.rs
crates/qbice_derive/tests/: derive_for_query_id.rs  executor_macro.rs  query_derive.rs  query_extend.rs
crates/serialize/: Cargo.toml
crates/serialize/src/: decode.rs  encode.rs  lib.rs  plugin.rs  postcard.rs  session.rs
crates/serialize/src/postcard/: test.rs
crates/serialize_derive/: Cargo.toml
crates/serialize_derive/src/: lib.rs
crates/stable_hash/: Cargo.toml
crates/stable_hash/src/: lib.rs
crates/stable_hash_derive/: Cargo.toml
crates/stable_hash_derive/src/: lib.rs
crates/stable_type_id/: Cargo.toml
crates/stable_type_id/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: dynamic_map.rs  intern.rs  key_of_set_map.rs  kv_database.rs  lib.rs  sharded.rs  sieve.rs  single_flight.rs  single_map.rs  storage_engine.rs  tiny_lfu.rs  wide_column_cache.rs  write_batch.rs  write_manager.rs  write_transaction.rs
crates/storage/src/dynamic_map/: cache.rs  in_memory.rs
crates/storage/src/intern/: test.rs
crates/storage/src/key_of_set_map/: cache.rs  in_memory.rs
crates/storage/src/kv_database/: buffer_pool.rs  default_shard_amount.rs  fjall.rs  in_memory.rs  rocksdb.rs
crates/storage/src/kv_database/rocksdb/: test.rs
crates/storage/src/sieve/: single_flight.rs  write_behind.rs
crates/storage/src/single_map/: cache.rs  in_memory.rs
crates/storage/src/storage_engine/: db_backed.rs  in_memory.rs
crates/storage/src/tiny_lfu/: lru.rs  policy.rs  read_buffer.rs  single_flight.rs  sketch.rs  write_buffer.rs
crates/storage/src/wide_column_cache/: single_flight.rs  test.rs
crates/storage/src/write_manager/: write_behind.rs
doc/: FIREWALL.md
tutorial/: defining-queries.html  executing-queries.html  getting-started.html  implementing-executors.html  setting-up-engine.html  updating-inputs.html
