[workspace]
members = [
    "crates/qbice",
    "crates/integration_test",
    "crates/stable_hash",
    "crates/stable_hash_derive",
    "crates/stable_type_id",
    "crates/identifiable_derive_lib",
    "crates/identifiable_derive",
    "crates/serialize",
    "crates/serialize_derive",
    "crates/storage",
    "crates/benchmark",
    "crates/qbice_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Simmypeet"]
description = "The Query-Based Incremental Computation Engine"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"

[workspace.dependencies]
siphasher = "1.0.1"
static_assertions = "1.1.0"
dashmap = { version = "6.1.0", features = ["rayon", "raw-api"] }
flexstr = "0.9.1"
quote = "1.0.42"
syn = "2.0.111"
proc-macro2 = "1.0.103"
smallbox = "0.8.8"
tokio = { version = "1.48.0", features = ["sync", "rt"] }
enum-as-inner = "0.6.1"
take_mut = "0.2.2"
thiserror = "2.0.17"
parking_lot = "0.12.5"
tracing = "0.1.43"
tracing-test = "0.2.5"
crossbeam-utils = "0.8.21"
bimap = "0.6.3"
fxhash = "0.2.1"
rust-rocksdb = "0.44.2"
tempfile = "3"
futures = "0.3.31"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
fjall = "3.0.1"
criterion = { version = "0.8.0", features = ["async_tokio"] }
tokio-util = "0.7.18"
crossbeam = "0.8.4"
thread_local = "1.1.9"
moka = { version = "0.12.13", features = ["future", "sync"] }
ouroboros = "0.18.5"
bon = "3.8.2"
tracing-subscriber = "0.3.22"

[workspace.lints.rust]
missing_docs = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# this generates errors on enum-as-inner in nightly toolchain
double-parens = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
use_self = "deny"
useless_let_if_seq = "deny"
set_contains_or_insert = "deny"
option_if_let_else = "deny"
needless_collect = "deny"
missing_const_for_fn = "deny"
equatable_if_let = "deny"
redundant_clone = "deny"
cognitive_complexity = "deny"
type_repetition_in_bounds = "deny"
trait_duplication_in_bounds = "deny"
collection_is_never_read = "deny"
branches_sharing_code = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
