[package]
name = "qbice_benchmark"
version.workspace = true
authors.workspace = true
description = "Benchmarking for QBICE"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
qbice = { path = "../qbice" }
dashmap.workspace = true
tempfile.workspace = true
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "firewall"
path = "benches/firewall.rs"
harness = false


[lints]
workspace = true
