[package]
name = "qbice_benchmark"
version.workspace = true
authors.workspace = true
description = "Benchmarking for QBICE"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
qbice = { path = "../qbice" }
criterion.workspace = true
fxhash.workspace = true
tokio = { version = "1", features = ["full"] }
mimalloc = "*"

[[bench]]
name = "firewall"
path = "benches/firewall.rs"
harness = false


[lints]
workspace = true
