[lib]
proc-macro = true

[package]
name = "qbice_identifiable_derive"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
qbice_identifiable_derive_lib = { path = "../identifiable_derive_lib" }
syn = { workspace = true }

[lints]
workspace = true
