[lib]
proc-macro = true

[package]
name = "qbice_identifiable_derive"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qbice_identifiable_derive_lib = { version = "0.1.0", path = "../identifiable_derive_lib" }
syn = { workspace = true }

[lints]
workspace = true
