[package]
name = "qbice_integration_test"
version.workspace = true
authors.workspace = true
description = "Integration tests for QBICE"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
qbice = { path = "../qbice" }
tempfile.workspace = true
tokio.workspace = true
flexstr.workspace = true
tracing-test.workspace = true
tracing.workspace = true
futures.workspace = true
rayon.workspace = true
tokio-util.workspace = true

[lints]
workspace = true

[[test]]
name = "basic_queries"
path = "tests/basic_queries.rs"

[[test]]
name = "input_changes"
path = "tests/input_changes.rs"

[[test]]
name = "cyclic_dependencies"
path = "tests/cyclic_dependencies.rs"

[[test]]
name = "cancellation"
path = "tests/cancellation.rs"

[[test]]
name = "parallel_queries"
path = "tests/parallel_queries.rs"

[[test]]
name = "firewall"
path = "tests/firewall.rs"

[[test]]
name = "timestamp_cancellation"
path = "tests/timestamp_cancellation.rs"
