[package]
name = "qbice"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license = "MIT"
repository = "https://github.com/Simmypeet/qbice"
keywords = ["incremental", "computation", "query", "cache", "async"]
categories = ["caching", "concurrency", "asynchronous"]

[dependencies]
qbice_stable_hash = { path = "../stable_hash" }
qbice_stable_type_id = { path = "../stable_type_id" }
tokio.workspace = true
dashmap.workspace = true
smallbox.workspace = true
enum-as-inner.workspace = true
static_assertions.workspace = true
take_mut.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-test.workspace = true


[lints]
workspace = true
