[package]
name = "qbice"
version = "0.1.2"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/qbice"
repository = "https://github.com/Simmypeet/qbice"
keywords = ["incremental", "computation", "query", "cache", "async"]
categories = ["caching", "concurrency", "asynchronous"]

[dependencies]
qbice_stable_hash = { version = "0.1.0", path = "../stable_hash" }
qbice_stable_type_id = { version = "0.1.0", path = "../stable_type_id" }
qbice_serialize = { version = "0.1.0", path = "../serialize" }
qbice_storage = { version = "0.1.0", path = "../storage" }
tokio.workspace = true
dashmap.workspace = true
smallbox.workspace = true
enum-as-inner.workspace = true
static_assertions.workspace = true
take_mut.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-test.workspace = true
bimap.workspace = true
crossbeam-utils.workspace = true
fxhash.workspace = true
rayon.workspace = true


[lints]
workspace = true
