[package]
name = "qbice"
version = "0.3.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/qbice"
repository = "https://github.com/Simmypeet/qbice"
keywords = ["incremental", "computation", "query", "cache", "async"]
categories = ["caching", "concurrency", "asynchronous"]

[features]
default = ["default_config"]
default_config = ["rocksdb"]
rocksdb = ["qbice_storage/rocksdb"]
fjall = ["qbice_storage/fjall"]

[dependencies]
qbice_stable_hash = { version = "0.1.4", path = "../stable_hash" }
qbice_stable_type_id = { version = "0.1.4", path = "../stable_type_id" }
qbice_serialize = { version = "0.1.1", path = "../serialize" }
qbice_storage = { version = "0.4.1", path = "../storage" }
qbice_derive = { version = "0.1.0", path = "../qbice_derive" }
tokio.workspace = true
dashmap.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
fxhash.workspace = true
rayon.workspace = true
futures.workspace = true
crossbeam.workspace = true

[dev-dependencies]
tempfile.workspace = true


[lints]
workspace = true
