[lib]
proc-macro = true


[package]
name = "qbice_derive"
version = "0.1.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
qbice_identifiable_derive_lib = { path = "../identifiable_derive_lib", version = "0.1.1" }

[dev-dependencies]
qbice = { path = "../qbice" }
qbice_serialize = { path = "../serialize" }
qbice_stable_hash = { path = "../stable_hash" }
qbice_stable_type_id = { path = "../stable_type_id" }
qbice_identifiable_derive = { path = "../identifiable_derive" }
qbice_serialize_derive = { path = "../serialize_derive" }
qbice_stable_hash_derive = { path = "../stable_hash_derive" }
flexstr = { workspace = true }

[lints]
workspace = true
