[package]
name = "qbice_serialize"
version = "0.1.3"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qbice_serialize_derive = { version = "0.1.0", path = "../serialize_derive" }
dashmap.workspace = true

[lints]
workspace = true
