[package]
name = "qbice_serialize"
version = "0.1.3"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
bitvec = ["dep:bitvec"]
smallvec = ["dep:smallvec"]

[dependencies]
qbice_serialize_derive = { version = "0.1.0", path = "../serialize_derive" }
dashmap.workspace = true
smallvec = { workspace = true, optional = true }
bitvec = { workspace = true, optional = true }

[lints]
workspace = true
