[package]
name = "qbice_stable_hash"
version = "0.1.4"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
siphasher.workspace = true
static_assertions.workspace = true
dashmap.workspace = true
flexstr.workspace = true
qbice_serialize = { version = "0.1.1", path = "../serialize" }
qbice_stable_hash_derive = { version = "0.1.1", path = "../stable_hash_derive" }

[lints]
workspace = true
