[lib]
proc-macro = true


[package]
name = "qbice_stable_hash_derive"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }


[lints]
workspace = true
