[package]
name = "qbice_stable_type_id"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
qbice_stable_hash = { path = "../stable_hash" }
qbice_identifiable_derive = { path = "../identifiable_derive" }

[lints]
workspace = true
