[package]
name = "qbice_stable_type_id"
version = "0.1.2"
license.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
qbice_stable_hash = { version = "0.1.2", path = "../stable_hash" }
qbice_serialize = { version = "0.1.0", path = "../serialize" }
qbice_identifiable_derive = { version = "0.1.1", path = "../identifiable_derive" }

[lints]
workspace = true
