[package]
name = "qbice_storage"
version = "0.1.2"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qbice_serialize = { version = "0.1.0", path = "../serialize" }
qbice_stable_type_id = { version = "0.1.1", path = "../stable_type_id" }
qbice_stable_hash = { version = "0.1.2", path = "../stable_hash" }
tokio.workspace = true
parking_lot.workspace = true
fxhash.workspace = true
futures.workspace = true
rust-rocksdb.workspace = true
dashmap.workspace = true
crossbeam-utils.workspace = true
crossbeam-channel.workspace = true
crossbeam-deque.workspace = true
rayon.workspace = true
enum-as-inner.workspace = true

[dev-dependencies]
tempfile = "3"
siphasher.workspace = true

[lints]
workspace = true
