[package]
name = "qbice_storage"
version = "0.4.8"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
fjall = ["dep:fjall"]
rocksdb = ["dep:rust-rocksdb"]

[dependencies]
qbice_serialize = { version = "0.1.3", path = "../serialize" }
qbice_stable_type_id = { version = "0.1.5", path = "../stable_type_id" }
qbice_stable_hash = { version = "0.1.5", path = "../stable_hash" }
parking_lot.workspace = true
fxhash.workspace = true
dashmap.workspace = true
crossbeam-utils.workspace = true
crossbeam-channel.workspace = true
crossbeam-deque.workspace = true
enum-as-inner.workspace = true
fjall = { workspace = true, optional = true }
rust-rocksdb = { workspace = true, optional = true }
thread_local.workspace = true

[dev-dependencies]
tempfile = "3"
siphasher.workspace = true

[lints]
workspace = true
