[package]
name = "qbice_storage"
version = "0.4.8"
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
rocksdb = ["dep:rust-rocksdb"]

[dependencies]
qbice_serialize = { version = "0.1.3", path = "../serialize" }
qbice_stable_type_id = { version = "0.1.5", path = "../stable_type_id" }
qbice_stable_hash = { version = "0.1.5", path = "../stable_hash" }
moka.workspace = true
parking_lot.workspace = true
fxhash.workspace = true
smallbox.workspace = true
dashmap.workspace = true
crossbeam-utils.workspace = true
crossbeam-channel.workspace = true
crossbeam-deque.workspace = true
enum-as-inner.workspace = true
rust-rocksdb = { workspace = true, optional = true }
thread_local.workspace = true
tokio.workspace = true
rayon.workspace = true
ouroboros.workspace = true
bon.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
siphasher.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
